Moving mouse while scrolling a sub menu makes it to lose focus #38505

Closed
opened 2014-02-05 19:31:34 +01:00 by Paulo José Oliveira Amaro · 7 comments

System Information
Ubuntu 13.10 64-bit
Intel Ironlake Mobile x86/MMX/SSE

Blender Version
2.69.10 f70d966

Short description of error
If a sub menu is opened and mouse scroll is used to select a menu item, moving the mouse (even a little movement) makes the sub menu to lose focus, and the parent menu gain focus instead.

blender-3-0001.mp4
In this video I access a sub menu and then change the selected item by scrolling. When I scroll with no moving the mouse, the selection works properly. If I move the mouse, immediately the sub menu is closed.

This is an annoying issue, because the scroll selection is intent to speed up the selection action, so right after selecting a sub menu and it opens, I start to scroll, but the mouse is still in moving by inertia. So the sub menu is closed right after to be opened.

**System Information** Ubuntu 13.10 64-bit Intel Ironlake Mobile x86/MMX/SSE **Blender Version** 2.69.10 f70d966 **Short description of error** If a sub menu is opened and mouse scroll is used to select a menu item, moving the mouse (even a little movement) makes the sub menu to lose focus, and the parent menu gain focus instead. [blender-3-0001.mp4](https://archive.blender.org/developer/F76121/blender-3-0001.mp4) In this video I access a sub menu and then change the selected item by scrolling. When I scroll with no moving the mouse, the selection works properly. If I move the mouse, immediately the sub menu is closed. This is an annoying issue, because the scroll selection is intent to speed up the selection action, so right after selecting a sub menu and it opens, I start to scroll, but the mouse is still in moving by inertia. So the sub menu is closed right after to be opened.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @PauloJoseOliveiraAmaro

Added subscriber: @PauloJoseOliveiraAmaro
Campbell Barton self-assigned this 2014-02-06 22:57:58 +01:00

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Checked on this report,

There is a problem where moving the mouse can cause a state inbetween de-selecting one menu and re-selecting another.

If the wheel or arrow keys are pressed while in that state - the submenu closes and the parent menu gets the event.

I've increased the margin for checking mouse motion to 8px so this wont by accident. However if you intentionally wave the mouse while using the mousewheel or holding down an arrow key, its still possible to redo the bug.

Committed change:
a00ebaecce

IMHO its reasonable to expect the user not to wave the mouse around fast while using the wheel.

closing.

Checked on this report, There is a problem where moving the mouse can cause a state inbetween de-selecting one menu and re-selecting another. If the wheel or arrow keys are pressed while in that state - the submenu closes and the parent menu gets the event. I've increased the margin for checking mouse motion to 8px so this wont by accident. However if you intentionally wave the mouse while using the mousewheel or holding down an arrow key, its still possible to redo the bug. Committed change: a00ebaecce IMHO its reasonable to expect the user not to wave the mouse around fast while using the wheel. closing.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Thank you, @ideasman42

You're right, moving the mouse while using the wheel is not intentional, but an effect of inertia of moving to the new menu just few seconds before to start using the mouse wheel. So I think this solution will be enough.

But I just discover another way to trigger this bug. If you place the mouse cursor above a "separation line" of a child menu, and start to scroll, it will close the child menu and move focus to the parent menu, even without moving the mouse.

So maybe this bug can be relate to not having the cursor above a menu entry. I'm sorry for not had investigated enough this bug in the beginning.

Thank you, @ideasman42 You're right, moving the mouse while using the wheel is not intentional, but an effect of inertia of moving to the new menu just few seconds before to start using the mouse wheel. So I think this solution will be enough. But I just discover another way to trigger this bug. If you place the mouse cursor above a "separation line" of a child menu, and start to scroll, it will close the child menu and move focus to the parent menu, even without moving the mouse. So maybe this bug can be relate to not having the cursor above a menu entry. I'm sorry for not had investigated enough this bug in the beginning.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38505
No description provided.